2006-11-16  Christian Persch  <chpe@cvs.gnome.org>

	* browser-plugin/totemPlugin.cpp:
	Support image/gif and image/jpeg in the narrowspace plugin.
	Bug #375611.

2006-11-16  Christian Persch  <chpe@cvs.gnome.org>

	* browser-plugin/totemGMPPlugin.cpp:
	Add audio/x-mpegurl to mime types list. Bug #375205.

2006-11-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/.htaccess: upd
	* browser-plugin/tests/1.html:
	* browser-plugin/tests/2.html:
	Add test 1: previewimage param for the MullY plugin
	Add test 2: basic href support
	* browser-plugin/tests/launch-web-server.sh: add the rewrite module
	* browser-plugin/tests/mjpeg-totem-logo.avi: created a simple video
	to show playback (MJPEG video, AVI container, no sound)
	* browser-plugin/tests/totem-href.jpg: add simple "HREF" image

2006-11-15  Christian Persch  <chpe@cvs.gnome.org>

	* Makefile.am:
	* browser-plugin/Makefile.am:
	* browser-plugin/README:
	* browser-plugin/TODO:
	A browser-plugin/org_gnome_totem_PluginViewer.xml:
	A browser-plugin/totem-plugin-viewer-commands.h:
	A browser-plugin/totem-plugin-viewer-options.h:
	A browser-plugin/totem-plugin-viewer.c:
	* browser-plugin/totemBasicPlugin.cpp:
	* browser-plugin/totemBasicPlugin.h:
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemComplexPlugin.h:
	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemGMPPlugin.h:
	* browser-plugin/totemMullYPlugin.cpp:
	* browser-plugin/totemMullYPlugin.h:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.h:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h:
	* browser-plugin/totemPluginGlue.cpp:
	* configure.in:
	* data/mozilla-viewer.glade:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/backend/bvw-test.c: (on_redirect), (main):
	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_can_parse_from_data):
	R src/totem-mozilla-interface.xml:
	R src/totem-mozilla-options.h:
	R src/totem-mozilla-viewer.c:
