@@ -1,6 +1,12 @@
 2006-11-16  Christian Persch  <chpe@cvs.gnome.org>
 
 	* browser-plugin/totemPlugin.cpp:
+	Use the IO service to determine whether a given scheme is supported.
+	Bug #375677.
+
+2006-11-16  Christian Persch  <chpe@cvs.gnome.org>
+
+	* browser-plugin/totemPlugin.cpp:
 	Support image/gif and image/jpeg in the narrowspace plugin.
 	Bug #375611.
 
